syntax = "proto3";

package authentication.service.v1;

import "gnostic/openapi/v3/annotations.proto";

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";

import "pagination/v1/pagination.proto";

// 登录策略管理服务
service LoginPolicyService {
  // 查询登录策略列表
  rpc List (pagination.PagingRequest) returns (ListLoginPolicyResponse) {}

  // 统计登录策略数量
  rpc Count (pagination.PagingRequest) returns (CountLoginPolicyResponse) {}

  // 查询登录策略详情
  rpc Get (GetLoginPolicyRequest) returns (LoginPolicy) {}

  // 创建登录策略
  rpc Create (CreateLoginPolicyRequest) returns (google.protobuf.Empty) {}

  // 更新登录策略
  rpc Update (UpdateLoginPolicyRequest) returns (google.protobuf.Empty) {}

  // 删除登录策略
  rpc Delete (DeleteLoginPolicyRequest) returns (google.protobuf.Empty) {}
}

// 登录策略
message LoginPolicy {
  // 登录策略类型
  enum Type {
    LOGIN_RESTRICTION_TYPE_UNSPECIFIED = 0; // 未知

    BLACKLIST = 1; // 黑名单
    WHITELIST = 2; // 白名单
  }

  // 登录策略方式
  enum Method {
    LOGIN_RESTRICTION_METHOD_UNSPECIFIED = 0; // 未知

    IP = 1; // IP地址限制
    MAC = 2; // MAC地址限制，绑定设备的MAC地址。
    REGION = 3; // 地区限制，根据地理位置（如国家、城市）限制登录。
    TIME = 4; // 时间限制，限制登录的时间段，例如只允许工作时间登录。
    DEVICE = 5; // 设备限制，限制登录设备的类型（如PC、手机）或特定设备ID。
  }

  optional uint32 id = 1 [
    json_name = "id",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "登录策略ID"
    }
  ]; // 登录策略ID

  optional uint32 target_id = 2 [
    json_name = "targetId",
    (gnostic.openapi.v3.property) = {
      description: "目标用户ID"
    }
  ]; // 目标用户ID

  optional Type type = 3 [
    json_name = "type",
    (gnostic.openapi.v3.property) = {
      description: "限制类型"
    }
  ]; // 限制类型

  optional Method method = 4 [
    json_name = "method",
    (gnostic.openapi.v3.property) = {
      description: "限制方式"
    }
  ]; // 限制方式

  optional string value = 5 [
    json_name = "value",
    (gnostic.openapi.v3.property) = {
      description: "限制值（如IP地址、MAC地址或地区代码）"
    }
  ]; // 限制值（如IP地址、MAC地址或地区代码）

  optional string reason = 6 [
    json_name = "reason",
    (gnostic.openapi.v3.property) = { description: "限制原因" }
  ]; // 限制原因

  optional uint32 tenant_id = 40 [
    json_name = "tenantId",
    (gnostic.openapi.v3.property) = {description: "租户ID，0代表系统全局角色"}
  ];  // 租户ID，0代表系统全局角色
  optional string tenant_name = 41 [
    json_name = "tenantName",
    (gnostic.openapi.v3.property) = {description: "租户名称"}
  ];  // 租户名称

  optional uint32 created_by = 100 [json_name = "createdBy", (gnostic.openapi.v3.property) = {description: "创建者用户ID"}]; // 创建者用户ID
  optional uint32 updated_by = 101 [json_name = "updatedBy", (gnostic.openapi.v3.property) = {description: "更新者用户ID"}]; // 更新者用户ID
  optional uint32 deleted_by = 102 [json_name = "deletedBy", (gnostic.openapi.v3.property) = {description: "删除者用户ID"}]; // 删除者用户ID

  optional google.protobuf.Timestamp created_at = 200 [json_name = "createdAt", (gnostic.openapi.v3.property) = {description: "创建时间"}];// 创建时间
  optional google.protobuf.Timestamp updated_at = 201 [json_name = "updatedAt", (gnostic.openapi.v3.property) = {description: "更新时间"}];// 更新时间
  optional google.protobuf.Timestamp deleted_at = 202 [json_name = "deletedAt", (gnostic.openapi.v3.property) = {description: "删除时间"}];// 删除时间
}

// 查询登录策略列表 - 回应
message ListLoginPolicyResponse {
  repeated LoginPolicy items = 1;
  uint64 total = 2;
}

// 查询登录策略详情 - 请求
message GetLoginPolicyRequest {
  oneof query_by {
    uint32 id = 1 [
      (gnostic.openapi.v3.property) = {description: "ID", read_only: true},
      json_name = "id"
    ]; // ID
  }

  optional google.protobuf.FieldMask view_mask = 100 [
    json_name = "viewMask",
    (gnostic.openapi.v3.property) = {
      description: "视图字段过滤器，用于控制返回的字段"
    }
  ]; // 视图字段过滤器，用于控制返回的字段
}

// 创建登录策略 - 请求
message CreateLoginPolicyRequest {
  LoginPolicy data = 1;
}

// 更新登录策略 - 请求
message UpdateLoginPolicyRequest {
  uint32 id = 1;

  LoginPolicy data = 2;

  google.protobuf.FieldMask update_mask = 3 [
    (gnostic.openapi.v3.property) = {
      description: "要更新的字段列表",
      example: {yaml : "id,realname,username"}
    },
    json_name = "updateMask"
  ]; // 要更新的字段列表

  optional bool allow_missing = 4 [
    (gnostic.openapi.v3.property) = {description: "如果设置为true的时候，资源不存在则会新增(插入)，并且在这种情况下`updateMask`字段将会被忽略。"},
    json_name = "allowMissing"
  ]; // 如果设置为true的时候，资源不存在则会新增(插入)，并且在这种情况下`updateMask`字段将会被忽略。
}

// 删除登录策略 - 请求
message DeleteLoginPolicyRequest {
  uint32 id = 1;
}

message CountLoginPolicyResponse {
  uint64 count = 1;
}
